@@ -21,16 +21,15 @@ public class AuthenticationRestApi {
 
     public AuthenticationUser validateToken(String token) {
 
-        ServiceInstance serviceInstance = discoveryClient.getInstances("AUTHENTICATION-SERVICES").get(0);
+        ServiceInstance serviceInstance = discoveryClient.getInstances("AUTHENTICATION-SERVICES").getFirst();
 
-        AuthenticationUser authenticationUser = restClient.get()
+        return restClient.get()
                 .uri(serviceInstance.getUri() + "/v1/api/auth/validate?token={token}", token)
                 .retrieve()
                 .onStatus(HttpStatusCode::is5xxServerError, (request, response) -> {
                     throw new BusinessException(response.getStatusCode().toString(), response.getStatusText());
                 })
                 .body(AuthenticationUser.class);
-        return authenticationUser;
     }
 
 }
